Closed Bug 326530 Opened 20 years ago Closed 19 years ago

Validation chokes on empty xsd:date instance data

Categories

(Core Graveyard :: Web Services, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: allan, Assigned: allan)

References

()

Details

(Keywords: fixed1.8.0.5, fixed1.8.1)

Attachments

(2 files)

Something goes wrong in the validation of empty instance data with type "xsd:date". The following assertion appears: ###!!! ASSERTION: |First()| called on an empty string: 'mLength > 0', file ../../../dist/include/string/nsTSubstring.h, line 201
Attached file Testcase
On load I get: nsXFormsModelElement::Rebuild() nsXFormsModelElement::Recalculate() nsXFormsModelElement::Revalidate() ###!!! ASSERTION: |First()| called on an empty string: 'mLength > 0', file ../../../dist/include/string/nsTSubstring.h, line 201 Break: at file ../../../dist/include/string/nsTSubstring.h, line 201 nsXFormsModelElement::InitializeControls() And on clicking submit (wihout entering anything in the field): nsXFormsModelElement::Recalculate() nsXFormsModelElement::Revalidate() ###!!! ASSERTION: |First()| called on an empty string: 'mLength > 0', file ../../../dist/include/string/nsTSubstring.h, line 201 Break: at file ../../../dist/include/string/nsTSubstring.h, line 201 WARNING: NS_ENSURE_TRUE(principal) failed, file nsDocument.cpp, line 1279 WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed, file nsXFormsSubmissionElement.cpp, line 1321 WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed, file nsXFormsSubmissionElement.cpp, line 1179 WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed, file nsXFormsSubmissionElement.cpp, line 862 WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv)) failed, file nsXFormsSubmissionElement.cpp, line 652
sounds like debugging it, at least, should be straight forward. Reassigning to Barry.
Assignee: doronr → barrya
Blocks: 331209
Assignee: barrya → allan
Attached patch PatchSplinter Review
Attachment #222846 - Flags: review?(doronr)
Status: NEW → ASSIGNED
Component: XForms → Web Services
Attachment #222846 - Flags: review?(doronr) → review+
Fixed on trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Keywords: fixed1.8.1
Keywords: fixed1.8.0.5
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: