Validation chokes on empty xsd:date. Bug 326530, r=doronr