extensions/schema-validation/src/nsSchemaValidator.cpp
@@ -2512,6 +2512,9 @@ nsSchemaValidator::IsValidSchemaDate(const nsAString & aNodeValue,
 
   LOG(("  Validating Date:"));
 
+  if (aNodeValue.IsEmpty())
+    return PR_FALSE;
+
   nsAutoString dateString(aNodeValue); 
   if (dateString.First() == '-') {
     aResult->isNegative = PR_TRUE;
